2011-02-04 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/mcs51/gen.h,
	  src/mcs51/gen.c,
	  sdas/linksrc/Makefile.in,
	  support/makebin/makebin.c,
	  support/regression/tests/bug3130806.c:
	  Fixes from trunk.

2011-02-04 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* sim/ucsim/z80.src/inst_cb.cc:
	  Fixed #3166058.

2011-01-27 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc:
	  Improved handling of HL.
	  
2011-01-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Improved handling of HL.

2011-01-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/peeph-z80.def:
	  Improved handling of A and HL.

2011-01-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* Makefile.common.in,
	  src/z80/ralloc2.cc,
	  src/z80/gen.c,
	  src/z80/peeph-z80.def:
	  Improved handling of A and HL.

2011-01-25 Borut Razem <borut.razem AT gmail.com>

	* src/z80/gen.c:
	  removed MSCV 2010 warning C4018: '<' : signed/unsigned mismatch
	* src/SDCCsysytem.c, src/SDCCutil.c: removed MSCV 2010 warnings

2011-01-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc:
	  Improved handling of A and HL.

2011-01-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCglobl.h,
	  src/SDCCralloc.hpp,
	  std/SDCCmain.c,
	  src/z80/z80.h,
	  src/z80/main.c:
	  Modified fix for MSVC 2010 warnings, changed handling of --max-allocs-per-node option.

2011-01-24 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCralloc.hpp, src/z80/main.c, src/z80/ralloc2.cc,
	  src/z80/z80.h, src/z80/z80.vcxproj: fixed msvc 2010 warnings

2011-01-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Improved handling of HL in the new allocator.

2011-01-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc: