@@ -1,3 +1,10 @@
+2011-02-05 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCicode.c (setOperandType),
+	  support/regression/tests/bug-221168.c,
+	  support/regression/tests/bug3166208.c:
+	  Maarten's fix of #3166208 from trunk.
+
 2011-02-04 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/mcs51/gen.h,
